[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/scenes/models/Penguin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/smoke.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/snowflake.png" type="Texture" id=5]
[ext_resource path="res://src/scenes/actors/ShadowDynamic.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sound_effects/jump.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.462443
height = 1.57986

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_diffuse_mode = 1
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 4
particles_anim_v_frames = 2
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="ParticlesMaterial" id=2]
gravity = Vector3( 0, 0, 0 )
anim_speed = 1.0

[sub_resource type="QuadMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_diffuse_mode = 1
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="Curve" id=10]
min_value = -100.0
max_value = 100.0
_data = [ Vector2( 0, -2.95454 ), 0.0, 0.0, 0, 0, Vector2( 0.418478, 100 ), 390.303, 390.303, 0, 0, Vector2( 0.798913, -100 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.5125 ), 0.0, 0.163193, 0, 0, Vector2( 1, 0.676136 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 0, 0 )
radial_accel_curve = SubResource( 11 )
scale = 0.5
scale_random = 1.0
scale_curve = SubResource( 9 )

[sub_resource type="QuadMesh" id=7]

[node name="Player" type="KinematicBody"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Penguin" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, -0.000349561, -0.000114853, 0.000349627, 1, 0.000572635, 0.000114652, -0.000572675, 1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.000101268, 1.21634, -0.00783136 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.00832, 6.72889 )
script = ExtResource( 3 )

[node name="ParticlesSmoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.189059, 0 )
material_override = SubResource( 3 )
emitting = false
local_coords = false
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="ParticlesSnowflake" type="Particles" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.3, 0 )
material_override = SubResource( 5 )
emitting = false
lifetime = 0.25
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="ShadowDynamic" parent="." instance=ExtResource( 6 )]
height_offset = 8.0
scale_coeff = 12.0

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
